--- a/dashboard/modules/site-page/views/index.html
+++ b/dashboard/modules/site-page/views/index.html
@@ -1,6 +1,6 @@
-{% extends 'apostrophe-templates:layout.html' %}
-{% import 'apostrophe-templates:search.html' as search with context -%}
-{% import 'apostrophe-templates:card.html' as card with context -%}
+{% extends 'layout.html' %}
+{% import 'search.html' as search with context -%}
+{% import 'card.html' as card with context -%}
 
 {% block main %}
 <main class="o-container c-site-index">
