--- a/dashboard/views/card.html
+++ b/dashboard/views/card.html
@@ -24,7 +24,7 @@
           <h4 class="o-type-small c-card__website">
             <button data-apos-edit-site="{{ piece._id }}" target="_blank">
             {% if piece.website %}
-              {{ apos.helpers.stripHttp(piece.website) }}  
+              {{ piece.website }}  
             {% endif %}
             </button>
           </h4>
