--- a/dashboard/views/search.html
+++ b/dashboard/views/search.html
@@ -1,4 +1,4 @@
-{% import 'apostrophe-templates:svg/mag.html' as mag with context -%}
+{% import 'svg/mag.html' as mag with context -%}
 
 {% macro render() %}
 	<div class="c-search" data-search>
