uses basics module

--- a/sites/modules/@apostrophecms/home-page/views/page.html
+++ b/sites/modules/@apostrophecms/home-page/views/page.html
@@ -17,4 +17,5 @@ The master JavaScript browser-side entry point for the default theme is located 
 <p>
 The webpack configuration is located at: <code>webpack.config.js</code>
 </p>
+{% area data.page, 'main' %}
 {% endblock %}
