clean up the site creation experience, requires matching multisite PR

--- a/dashboard/views/card.html
+++ b/dashboard/views/card.html
@@ -20,7 +20,7 @@
         <h3 class="o-type-small c-card__title">{{ piece.title }}</h3>
         <h4 class="o-type-small c-card__website">
           <button data-edit-site="{{ piece._id }}" target="_blank">⚙️</button>
-          <a href="{{ piece._url }}">➡️</a>
+          <a href="{{ piece._siteLoginUrl }}">➡️</a>
         </h4>
       </div>
     </div>
