better layout, removed some styles

--- a/dashboard/modules/asset/src/scss/settings/_fonts.scss
+++ b/dashboard/modules/asset/src/scss/settings/_fonts.scss
@@ -6,7 +6,7 @@ $font-12: 12px;
 $font-18: 1.5rem;
 $font-36: 3rem;
 
-$font: 'Roboto Mono', monospace;
+$font: -apple-system, system-ui, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
 $font-family: (
   serif: #{'FontFamilyName', serif},
