--- a/dashboard/modules/asset/src/scss/objects/_containers.scss
+++ b/dashboard/modules/asset/src/scss/objects/_containers.scss
@@ -2,5 +2,17 @@
   max-width: 1180px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 2rem;
+  padding: 2rem 0 2rem;
+}
+
+.c-site-index {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  user-select: none;
+  background-color: $background;
 }
