--- a/sites/views/layout.html
+++ b/sites/views/layout.html
@@ -10,3 +10,10 @@
 {% block beforeMain %}
   {{ navigation.render(data.global) }}  
 {% endblock %}
+
+{% block afterMain %}
+  {{ super() }}
+  <footer>
+    {%  area data.global, 'footer' %}
+  </footer>
+{% endblock %}
