eliminate a few remaining vestiges of webpack

--- a/sites/modules/@apostrophecms/home-page/views/page.html
+++ b/sites/modules/@apostrophecms/home-page/views/page.html
@@ -12,10 +12,10 @@ You can use normal <a href="https://docs.apostrophecms.org/">Apostrophe developm
 The master <a href="https://sass-lang.com/">SASS stylesheet</a> for the default theme is located at: <code>modules/theme-default/src/scss/index.scss</code>
 </p>
 <p>
-The master JavaScript browser-side entry point for the default theme is located at: <code>modules/theme-default/src/js/index.js</code>
+The master JavaScript browser-side entry point for the default theme is located at: <code>sites/modules/theme-default/ui/src/index.js</code>
 </p>
 <p>
-The webpack configuration is located at: <code>webpack.config.js</code>
+The master Sass SCSS browser-side entry point for the default theme is located at: <code>sites/modules/theme-default/ui/src/index.scss</code>
 </p>
 {% area data.page, 'main' %}
 {% endblock %}
