Initial stylelint fixes

--- a/dashboard/modules/asset/ui/src/index.scss
+++ b/dashboard/modules/asset/ui/src/index.scss
@@ -1,11 +1,11 @@
-@import 'scss/settings/_fonts.scss';
-@import 'scss/settings/_colors.scss';
-@import 'scss/objects/_containers.scss';
-@import 'scss/tools/_clearfix.scss';
-@import 'scss/components/_admin.scss';
-@import 'scss/components/_site-list.scss';
-@import 'scss/components/_site-menu.scss';
-@import 'scss/components/_navigation.scss';
-@import 'scss/components/_search.scss';
-@import 'scss/components/_card.scss';
-@import 'scss/components/_login.scss';
+@import 'scss/settings/_fonts';
+@import 'scss/settings/_colors';
+@import 'scss/objects/_containers';
+@import 'scss/tools/_clearfix';
+@import 'scss/components/_admin';
+@import 'scss/components/_site-list';
+@import 'scss/components/_site-menu';
+@import 'scss/components/_navigation';
+@import 'scss/components/_search';
+@import 'scss/components/_card';
+@import 'scss/components/_login';
