--- a/dashboard/modules/asset/ui/src/scss/tools/_clearfix.scss
+++ b/dashboard/modules/asset/ui/src/scss/tools/_clearfix.scss
@@ -1,4 +1,4 @@
-.t-clearfix:after, .t-clearfix:before {
+.t-clearfix::after, .t-clearfix::before {
   visibility: hidden;
   display: block;
   height: 0;
