--- a/dashboard/modules/asset/ui/src/scss/components/_admin.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_admin.scss
@@ -1,7 +1,7 @@
 .apos-ui .apos-button--global {
-  background-image: linear-gradient(36deg, #4950F6 12%, #578BEB 94%);
+  background-image: linear-gradient(36deg, #4950f6 12%, #578beb 94%);
 }
 
 .apos-ui .apos-button:active, .apos-ui .apos-button:focus {
-  box-shadow: 0 0 13px 4px rgba(85,130,236,0.4);
+  box-shadow: 0 0 13px 4px rgba(85, 130, 236, 0.4);
 }
