--- a/dashboard/modules/asset/ui/src/scss/components/_login.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_login.scss
@@ -39,7 +39,7 @@
     position: relative;
     margin-bottom: 30px;
     border-radius: 5px;
-    box-shadow: 0 7px 30px 0 rgba(77,77,77,0.3);
+    box-shadow: 0 7px 30px 0 rgba(77, 77, 77, 0.3);
 
     &.active-focus .c-login__input-border {
       filter: none;
@@ -60,7 +60,7 @@
   outline: none;
 
   &:focus {
-    border: 1px solid lighten( $input-border, 20% );
+    border: 1px solid lighten($input-border, 20%);
     box-shadow: none;
   }
 
@@ -93,19 +93,21 @@
 }
 
 .c-login__submit {
-  filter: grayscale(100%);
-  transition: all 0.3s ease;
   display: block;
   width: 100%;
   padding: 17px;
-  border-radius: 5px;
   color: $white;
-  background-image: linear-gradient(-46deg, #CC9300 0%, #EA433A 47%, #B327BF 100%);
   font-family: $font;
+  transition: all 0.3s ease;
+  filter: grayscale(100%);
+  border-radius: 5px;
+  background-image: linear-gradient(-46deg, #cc9300 0%, #ea433a 47%, #b327bf 100%);
   outline: none;
+
   &:focus, &:hover {
     filter: none;
   }
+
   &:hover {
     cursor: pointer;
   }
@@ -118,9 +120,9 @@
   display: flex;
   width: 100%;
   height: 50vh;
-  padding-left: 30px;
   padding-bottom: 30px;
-  align-items: flex-end;
+  padding-left: 30px;
   color: rgba(255, 255, 255, 0.67);
-  background-image: linear-gradient(-180deg, rgba(0,0,0,0) 21%, #000 100%);
+  align-items: flex-end;
+  background-image: linear-gradient(-180deg, rgba(0, 0, 0, 0) 21%, #000 100%);
 }
