--- a/dashboard/modules/asset/ui/src/scss/components/_navigation.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_navigation.scss
@@ -4,6 +4,7 @@
 
   // undoing a lot of apostrophe chrome here
   .apos-ui { font-size: $font-10; }
+
   .apos-admin-bar {
     z-index: zindex(default);
     position: relative;
@@ -19,6 +20,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     box-shadow: none;
+
     * {
       transition: none;
     }
@@ -37,9 +39,11 @@
 
   .apos-admin-bar-item {
     height: auto;
+
     &:hover {
       background-color: transparent;
     }
+
     &:hover a, &:hover .apos-admin-bar-item-inner {
       text-decoration: underline;
     }
@@ -66,5 +70,5 @@
 
 .apos-ui .apos-admin-bar .apos-admin-bar-item .apos-dropdown.apos-active .apos-admin-bar-item-inner {
   background-color: $white;
-  box-shadow: 0 2px 7px 2px rgba(21,22,22,0.23);
+  box-shadow: 0 2px 7px 2px rgba(21, 22, 22, 0.23);
 }
