--- a/dashboard/modules/asset/ui/src/scss/tools/_fonts.scss
+++ b/dashboard/modules/asset/ui/src/scss/tools/_fonts.scss
@@ -20,15 +20,18 @@
     $extmod: if(
       map-has-key($extmods, $ext),
       $ext + map-get($extmods, $ext),
-      $ext);
+      $ext
+    );
     $format: if(
       map-has-key($formats, $ext),
       map-get($formats, $ext),
-      $ext);
+      $ext
+    );
     $src: append(
       $src,
-      url(quote($url + $file + '.' + $extmod)) format(quote($format)),
-      comma);
+      url(quote($url + $file + '.' + $extmod)
+    ) format(quote($format)),
+    comma);
   }
 
   @font-face {
