--- a/dashboard/modules/asset/ui/src/scss/components/_card.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_card.scss
@@ -35,7 +35,7 @@
 .c-card__media-placeholder {
   width: 100%;
   height: 100%;
-  background: linear\-gradient(103deg, rgba(246, 73, 18, 1) 0%, rgba(205,0,175,1) 91%, rgba(199, 0, 188, 1) 100%);
+  background: linear-gradient(103deg, rgba(246, 73, 18, 1) 0%, rgba(205,0,175,1) 91%, rgba(199, 0, 188, 1) 100%);
 }
 
 .c-card__content {
