--- a/dashboard/modules/asset/ui/src/scss/components/_card.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_card.scss
@@ -11,8 +11,8 @@
   padding: 8px;
   border-radius: 6px;
   background: $white;
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 }
-
 
 .c-card__media {
   height: 200px;
@@ -35,7 +35,7 @@
 .c-card__media-placeholder {
   width: 100%;
   height: 100%;
-  background: linear-gradient(103deg, rgba(246, 73, 18, 1) 0%, rgba(205,0,175,1) 91%, rgba(199, 0, 188, 1) 100%);
+  background-image: linear-gradient(36deg, #4950f6 12%, #578beb 94%);
 }
 
 .c-card__content {
