--- a/dashboard/modules/asset/ui/src/scss/components/_card.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_card.scss
@@ -39,43 +39,42 @@
 }
 
 .c-card__content {
-  padding: 16px 0 8px 0;
+  padding: 16px 0 8px;
 }
 
 .c-card__title {
+  overflow: hidden;
+  margin: 0;
+  margin-bottom: 8px;
   font-family: $font;
   font-size: 16px;
   line-height: 1.333;
-  margin: 0;
-  margin-bottom: 8px;
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
 .c-card__button {
-  border: none;
-  margin: 0;
-  padding: 0;
-  width: auto;
-  overflow: visible;
-  background: transparent;
-  color: inherit;
-  font: inherit;
-  line-height: normal;
-  -webkit-font-smoothing: inherit;
-  -moz-osx-font-smoothing: inherit;
-  -webkit-appearance: none;
-  text-decoration: none;
-  cursor: pointer;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  overflow: visible;
   width: 32px;
   height: 32px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  color: inherit;
+  background: transparent;
+  font: inherit;
+  line-height: normal;
+  text-decoration: none;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
   background-color: $white;
   text-align: center;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
 
   &:hover {
     background-color: #f4f4f4;
