--- a/sites/modules/theme-default/ui/src/index.scss
+++ b/sites/modules/theme-default/ui/src/index.scss
@@ -1,6 +1,17 @@
 // Styles for this theme
 
 // If you need to share styles across themes, just @import them here
+// Settings
+@import 'settings/_fonts';
+@import 'settings/_layout';
+
+// Utilities
+@import 'utilities/_typography';
+
+// Base
+@import '_document';
+@import '_type';
+@import '_grid';
 
 .image {
   max-width: 100%;
