adds the hero to the top level area

--- a/sites/modules/default-page/views/page.html
+++ b/sites/modules/default-page/views/page.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block main %}
-{% area data.page, 'main' %}
+<section>
+  {% area data.page, 'main' %}
+</section>
 {% endblock %}
