--- a/sites/modules/theme-default/ui/src/_grid.scss
+++ b/sites/modules/theme-default/ui/src/_grid.scss
@@ -1,4 +1,10 @@
 .o-container {
   max-width: 108rem;
-  margin: 0 auto 32px;
+  margin: 0 auto $gutter;
+}
+
+.o-widget {
+  .o-container & {
+    margin-bottom: $gutter;
+  }
 }
