--- a/sites/modules/theme-demo/ui/src/_type.scss
+++ b/sites/modules/theme-demo/ui/src/_type.scss
@@ -1,3 +1,7 @@
+body {
+  @include font-size(1);
+}
+
 h1 {
   @include font-size(4);
 
@@ -32,11 +36,6 @@ h4 {
 
 h5 {
   @include font-size(2);
-}
-
-h6,
-p {
-  @include font-size(1);
 }
 
 h1,
