--- a/sites/modules/theme-demo/ui/src/index.scss
+++ b/sites/modules/theme-demo/ui/src/index.scss
@@ -2,6 +2,7 @@
 
 // If you need to share styles across themes, just @import them here
 // Settings
+@import 'settings/_color';
 @import 'settings/_fonts';
 @import 'settings/_layout';
 
@@ -14,7 +15,11 @@
 @import '_grid';
 
 // Components
+@import '_button';
 @import '_columns';
+@import '_footer';
+@import '_hero';
+@import '_navigation';
 
 .o-widget--image {
   max-width: 100%;
