--- a/sites/modules/theme-demo/ui/src/_hero.scss
+++ b/sites/modules/theme-demo/ui/src/_hero.scss
@@ -1,5 +1,7 @@
 .apos-area {
   .hero-widget__content & {
-    max-width: 66.4rem;
+    @media screen and (min-width: 64em) {
+      width: 60%;
+    }
   }
 }
