--- a/sites/modules/theme-demo/ui/src/_navigation.scss
+++ b/sites/modules/theme-demo/ui/src/_navigation.scss
@@ -7,6 +7,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-right: $margin;
+  padding-left: $margin;
 }
 
 .navigation__link {
