--- a/sites/modules/theme-demo/ui/src/_hero.scss
+++ b/sites/modules/theme-demo/ui/src/_hero.scss
@@ -1,3 +1,7 @@
+.hero-widget {
+  margin-bottom: $gutter;
+}
+
 .apos-area {
   .hero-widget__content & {
     @media screen and (min-width: 64em) {
