adds faint gray bg to dashboard card, removes login stylesheet

--- a/dashboard/modules/asset/ui/src/scss/components/_card.scss
+++ b/dashboard/modules/asset/ui/src/scss/components/_card.scss
@@ -29,7 +29,7 @@
   height: 100%;
   align-items: center;
   justify-content: center;
-  background-color: $black;
+  background-color: $light;
 }
 
 .c-card__media-placeholder {
