--- a/dashboard/modules/asset/ui/src/scss/settings/_colors.scss
+++ b/dashboard/modules/asset/ui/src/scss/settings/_colors.scss
@@ -5,7 +5,7 @@ $green: #00bf9a;
 $red: #ea433a;
 $purple: #b327bf;
 $black: #1d232b;
-$light: #bababa;
+$light: #f2f2f2;
 $background: #11151f;
 $input: #2c354d;
 $input-border: #8895a7;
