--- a/sites/modules/default-page/views/page.html
+++ b/sites/modules/default-page/views/page.html
@@ -1,7 +1,11 @@
 {% extends 'layout.html' %}
+{% import 'content-placeholder:placeholder.html' as placeholder with context -%}
 
 {% block main %}
 <section>
   {% area data.page, 'main' %}
+  {% if not data.page.main or not data.page.main.items.length %}
+    {{ placeholder.render() }}
+  {% endif %}
 </section>
 {% endblock %}
