--- a/sites/modules/@apostrophecms/template/views/outerLayout.html
+++ b/sites/modules/@apostrophecms/template/views/outerLayout.html
@@ -3,8 +3,7 @@
 {% block standardHead %}
   {# Use standardHead and super() rather than extraHead to ensure palette injects after it #}
   {{ super() }}
-  {% if data.global.googleFontFamiliesUrl %}
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="{{ data.global.googleFontFamiliesUrl }}" rel="stylesheet" />
+  {% if data.global.googleFontScript %}
+    {{ data.global.googleFontScript | safe }}
   {% endif %}
 {% endblock %}
