--- a/sites/modules/@apostrophecms/template/views/outerLayout.html
+++ b/sites/modules/@apostrophecms/template/views/outerLayout.html
@@ -4,7 +4,8 @@
   {# Use standardHead and super() rather than extraHead to ensure palette injects after it #}
   {{ super() }}
   {% if data.global.googleFontScript and data.global.fontFamilies.length %}
-    {# defer embedding to check safemode etc #}
-    {% component '@apostrophecms/global:embedGoogleFonts' with data.global %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?{{ data.global.fontFamilyParameters | safe }}&display=swap" rel="stylesheet">
   {% endif %}
 {% endblock %}
