--- a/sites/modules/location-page/views/index.html
+++ b/sites/modules/location-page/views/index.html
@@ -1,21 +1,5 @@
-{# {% import '@apostrophecms/pager:macros.html' as pager with context %}
-{% import 'fragments.html' as fragments with context %} #}
-
 {% extends "layout.html" %}
 {% set markers = apos.location.formatMarkers(data.pieces) %}
-{{ apos.log(markers) }}
-
-{# {% block pageTitle %}
-  <div class="article-title-wrapper">
-    <div class="inner">
-      {% set title = data.page.title %}
-      {% if data.piece %}
-        {% set title = data.piece.title %}
-      {% endif %}
-      <h1 class="page-title">{{ title }}</h1>
-    </div>
-  </div>
-{% endblock %} #}
 {% block extraHead %}
   <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
   <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
@@ -28,12 +12,26 @@
       <div class="locations-list">
         <div class="locations-list__header">Find a Location</div>
         <div class="location-list__search">
-          <input class="location-list__search-input" type="text" value="Enter a zipcode to find a location">
+          <input placeholder="Enter Zip code or city, state" class="location-list__search-input" type="text">
           <button class="location-list__search-submit">Find Locations</button>
         </div>
         <ol class="location-list__items">
           {% for piece in data.pieces %}
-            <li>{{ piece.title }}</li>
+            <li class="location-list__item">
+              <h2 class="location-list__title">{{ piece.title }}</h2>
+              {% if piece.address %}
+                <p class="location-list__text location-list__address">{{ piece.address }}</p>  
+              {% endif %}
+              {% if piece.phone %}
+                <p class="location-list__text location-list__phone">{{ piece.phone }}</p>  
+              {% endif %}
+              {% if piece.hours %}
+                <p class="location-list__text location-list__hours">{{ piece.hours }}</p>  
+              {% endif %}
+              <a class="location-list__text location-list__button location-list__link" href="{{ piece._url }}">
+                View Location
+              </a>
+            </li>
           {% endfor %}
         </ol>
       </div>
