--- a/sites/modules/location-page/ui/src/index.scss
+++ b/sites/modules/location-page/ui/src/index.scss
@@ -2,10 +2,10 @@
 @import 'scss/show';
 
 .map-canvas {
-
+  width: 100%;
+  height: 100%;
 }
 
 .map-canvas--large {
-  width: 100%;
-  height: 80vh;
+
 }
