--- a/sites/modules/location-page/views/show.html
+++ b/sites/modules/location-page/views/show.html
@@ -1,5 +1,11 @@
 {% extends "layout.html" %}
 {% set markers = apos.location.formatMarkers([data.piece]) %}
+{% set img = apos.image.first(data.piece._banner) %}
+{% if img %}
+  {% set bannerSrc = img._urls.full %}
+{% else %}
+  {% set bannerSrc = 'https://images.unsplash.com/photo-1600093463592-8e36ae95ef56?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGNvZmZlZSUyMHNob3B8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60' %}
+{% endif %}
 {% block extraHead %}
   <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
   <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
@@ -7,7 +13,36 @@
 
 {% block main %}
   <section class="main location-show">
-    <h1>{{ data.piece.title }}</h1>
-    <p>{{ data.piece.address }}</p>
+    <div class="soci-container location-info" style="background-image:url({{ bannerSrc }})">
+      <div class="location-info__content">
+        <h1 class="location-info__title">{{ data.piece.title }}</h1>
+        <p>{{ data.piece.address }}</p>
+        <div class="location-info__buttons">
+          <a class="soci-button location-info__button" href="">Get Directions</a>
+          <a class="soci-button location-info__button" href="">Order Now</a>
+        </div>
+        {% if data.piece.hoursDay and data.piece.hoursDay.length %}
+        <ol class="location-hours">
+          {% for entry in data.piece.hoursDay %}
+            <li class="location-hours__entry">
+              <div class="location-hours__day">{{ entry.day }}</div>
+              <div class="location-hours__time">{{ entry.hours }}</div>
+            </li>
+          {% endfor %}
+        </ol>
+      {% endif %}
+      </div>
+    </div>
+    <div class="soci-container location-description">
+      <div class="location-description__content">
+        <div class="location-description__content-title">
+          About {{ data.piece.title }}
+        </div>
+        <div class="location-description__content-description">
+          {% area data.piece, 'description' %}
+        </div>
+      </div>
+      <div class="location-description__map" data-map='{{ markers | jsonAttribute({ single: true })}}'></div>
+    </div>
   </section>
 {% endblock %}
