--- a/sites/modules/location-page/ui/src/index.scss
+++ b/sites/modules/location-page/ui/src/index.scss
@@ -1,6 +1,10 @@
 @import 'scss/index';
 @import 'scss/show';
 
+.apos-popover--z-index-in-context {
+  z-index: 1001 !important;
+}
+
 .map-canvas {
   width: 100%;
   height: 100%;
@@ -8,4 +12,22 @@
 
 .map-canvas--large {
 
+}
+
+.map-canvas--loading {
+  position: relative;
+  animation-duration: 1.8s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #fafafa 30%, #f0f0f0 69%, #fafafa 94%);
+  background-size: auto;
+  background-size: 1000px 640px;
+}
+
+@keyframes placeHolderShimmer {
+  0% { background-position: -468px 0; }
+  100% { background-position: 468px 0; }
 }
