--- a/sites/modules/theme-soci/ui/src/index.scss
+++ b/sites/modules/theme-soci/ui/src/index.scss
@@ -1,3 +1,5 @@
+@import 'scss/card';
+
 .soci-button {
   background-color: #3EC2CF;
   color: white;
@@ -11,4 +13,5 @@
 .soci-container {
   max-width: 1054px;
   margin: 0 auto;
+  margin-bottom: 80px;
 }
