footer and stuff

--- a/sites/modules/location-page/views/show.html
+++ b/sites/modules/location-page/views/show.html
@@ -49,3 +49,9 @@
     </div>
   </section>
 {% endblock %}
+
+{% block afterMain %}
+  {{ super() }}
+  </main>
+  {% include "theme-soci:footer.html" %}
+{% endblock %}
