--- a/sites/modules/location-page/ui/src/scss/show.scss
+++ b/sites/modules/location-page/ui/src/scss/show.scss
@@ -1,7 +1,7 @@
 .location-info {
-  background-size: 70%;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: 100% 45%;
+  background-position: center;
 }
 
 .location-info__content {
