--- a/sites/modules/location-page/views/show.html
+++ b/sites/modules/location-page/views/show.html
@@ -13,7 +13,7 @@
 
 {% block main %}
   <section class="main location-show">
-    <div class="soci-container location-info" style="background-image:url({{ bannerSrc }})">
+    <div class="location-info" style="background-image:url({{ bannerSrc }})">
       <div class="location-info__content">
         <h1 class="location-info__title">{{ data.piece.title }}</h1>
         <p>{{ data.piece.address }}</p>
