--- a/sites/modules/theme-soci/ui/src/index.scss
+++ b/sites/modules/theme-soci/ui/src/index.scss
@@ -16,3 +16,30 @@
   margin: 0 auto;
   margin-bottom: 80px;
 }
+
+.soci-meta {
+  font-size: 10px;
+  letter-spacing: 2;
+  text-transform: uppercase;
+}
+
+.navigation {
+  justify-content: center;
+}
+
+.navigation img {
+  max-width: 160px;
+}
+
+.navigation__links {
+  text-align: center;
+  a {
+    display: inline-block;
+    width: 110px;
+    margin: 0 20px;
+  }
+}
+
+.header {
+  margin-bottom: 60px;
+}
