--- a/sites/modules/theme-soci/ui/src/index.scss
+++ b/sites/modules/theme-soci/ui/src/index.scss
@@ -2,7 +2,7 @@
 @import 'scss/footer';
 
 .soci-button {
-  background-color: #3EC2CF;
+  background-color: var(--accent-color);
   color: white;
   padding: 10px;
   text-align: center;
