--- a/sites/modules/product-widget/ui/src/index.scss
+++ b/sites/modules/product-widget/ui/src/index.scss
@@ -87,6 +87,7 @@
   padding: 0 33px;
 }
 .nekter-category-list-wrap h3 {
+  margin-top: 20px;
   letter-spacing: 0;
   padding-left: 20px;
   font-size: 46px;
