--- a/sites/modules/location-page/views/index.html
+++ b/sites/modules/location-page/views/index.html
@@ -18,7 +18,7 @@
         <ol class="location-list__items">
           {% for piece in data.pieces %}
             <li class="location-list__item">
-              <h2 class="location-list__title">{{ piece.title }}</h2>
+              <p class="location-list__title">{{ piece.title }}</p>
               {% if piece.address %}
                 <p class="location-list__text location-list__address">{{ piece.address }}</p>  
               {% endif %}
@@ -26,7 +26,7 @@
                 <p class="location-list__text location-list__phone">{{ piece.phone }}</p>  
               {% endif %}
               {% if piece.hoursBrief %}
-                <p class="location-list__text location-list__hours">{{ piece.hours }}</p>  
+                <p class="location-list__text location-list__hours">{{ piece.hoursBrief }}</p>  
               {% endif %}
               <a class="location-list__text soci-button location-list__button location-list__link" href="{{ piece._url }}">
                 View Location
