--- a/sites/modules/theme-soci/ui/src/scss/card.scss
+++ b/sites/modules/theme-soci/ui/src/scss/card.scss
@@ -18,6 +18,7 @@
 }
 
 .card-widget__link {
+  z-index: 2;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -27,4 +28,19 @@
 
 .card-widget__image {
   transition: all 0.2s ease;
+}
+
+.card-widget__img-wrapper {
+  position: relative;
+  &:before {
+    z-index: 1;
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.1;
+    top: 0;
+    left: 0;
+  }
 }
