--- a/sites/modules/theme-soci/ui/src/scss/footer.scss
+++ b/sites/modules/theme-soci/ui/src/scss/footer.scss
@@ -47,8 +47,8 @@
   color: var(--accent-color);
   border: 0;
   -webkit-appearance: none;
-  width: 60px;
-  height: 60px;
+  width: 45px;
+  height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -81,12 +81,11 @@
   }
 
   li {
-    font-size: 18px;
-    font-weight: 200;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
     text-transform: uppercase;
     color: black;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    font-size: 15px;
   }
 
   a, [data-rich-text] a {
@@ -103,10 +102,11 @@
 }
 
 .soci-footer__column-header {
-  font-size: 32px;
-  font-weight: 200;
   letter-spacing: 5px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .soci-footer__copyright {
