--- a/sites/modules/location-page/views/index.html
+++ b/sites/modules/location-page/views/index.html
@@ -36,6 +36,8 @@
         </ol>
       </div>
     </div>
-    
+  </section>
+  <section class="soci-container content">
+    {% area data.page, 'content' %}
   </section>
 {% endblock %}
