--- a/sites/modules/location-page/views/show.html
+++ b/sites/modules/location-page/views/show.html
@@ -6,10 +6,10 @@
 {% else %}
   {% set bannerSrc = 'https://images.unsplash.com/photo-1600093463592-8e36ae95ef56?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGNvZmZlZSUyMHNob3B8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60' %}
 {% endif %}
-{% block extraHead %}
+{# {% block extraHead %}
   <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
   <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
-{% endblock %}
+{% endblock %} #}
 
 {% block main %}
   <section class="main location-show">
