--- a/sites/modules/location-page/views/show.html
+++ b/sites/modules/location-page/views/show.html
@@ -18,8 +18,8 @@
         <h1 class="location-info__title">{{ data.piece.title }}</h1>
         <p>{{ data.piece.address }}</p>
         <div class="location-info__buttons">
-          <a class="soci-button location-info__button" href="">Get Directions</a>
-          <a class="soci-button location-info__button" href="">Order Now</a>
+          <a class="button soci-button location-info__button" href="">Get Directions</a>
+          <a class="button soci-button location-info__button" href="">Order Now</a>
         </div>
         {% if data.piece.hoursDay and data.piece.hoursDay.length %}
         <ol class="location-hours">
