--- a/sites/modules/location-page/views/index.html
+++ b/sites/modules/location-page/views/index.html
@@ -28,7 +28,7 @@
               {% if piece.hoursBrief %}
                 <p class="location-list__text location-list__hours">{{ piece.hoursBrief }}</p>  
               {% endif %}
-              <a class="location-list__text soci-button location-list__button location-list__link" href="{{ piece._url }}">
+              <a class="location-list__text button soci-button location-list__button location-list__link" href="{{ piece._url }}">
                 View Location
               </a>
             </li>
