--- a/sites/modules/location-page/views/show.html
+++ b/sites/modules/location-page/views/show.html
@@ -6,10 +6,10 @@
 {% else %}
   {% set bannerSrc = 'https://images.unsplash.com/photo-1600093463592-8e36ae95ef56?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fGNvZmZlZSUyMHNob3B8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60' %}
 {% endif %}
-{# {% block extraHead %}
+{% block extraHead %}
   <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
   <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
-{% endblock %} #}
+{% endblock %}
 
 {% block main %}
   <section class="main location-show">
@@ -18,8 +18,8 @@
         <h1 class="location-info__title">{{ data.piece.title }}</h1>
         <p>{{ data.piece.address }}</p>
         <div class="location-info__buttons">
-          <a class="button soci-button location-info__button" href="">Get Directions</a>
-          <a class="button soci-button location-info__button" href="">Order Now</a>
+          <a class="button location-info__button" href="">Get Directions</a>
+          <a class="button location-info__button" href="">Order Now</a>
         </div>
         {% if data.piece.hoursDay and data.piece.hoursDay.length %}
         <ol class="location-hours">
@@ -33,7 +33,7 @@
       {% endif %}
       </div>
     </div>
-    <div class="soci-container location-description">
+    <div class="location-description">
       <div class="location-description__content">
         <div class="location-description__content-title">
           About {{ data.piece.title }}
@@ -44,14 +44,8 @@
       </div>
       <div class="map-canvas location-description__map" data-map='{{ markers | jsonAttribute({ single: true })}}'></div>
     </div>
-    <div class="soci-container location-content">
+    <div class="location-content">
       {% area data.piece, 'content' %}
     </div>
   </section>
-{% endblock %}
-
-{% block afterMain %}
-  {{ super() }}
-  </main>
-  {% include "theme-soci:footer.html" %}
 {% endblock %}
